force-app/main/default/objects/Apttus_Billing__DunningReminderLog__c/Apttus_Billing__DunningReminderLog__c.object-meta.xml
<CustomObject>
    <description>This object is needed to store the history of all reminders going out. We need this to determine when the last reminder was sent out when processing Dunning Policy algorithm</description>
    <label>Dunning Reminder Log</label>
    <nameField>
        <displayFormat>DRL - {000000}</displayFormat>
        <label>Dunning Reminder Log Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dunning Reminder Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>