force-app/main/default/objects/Apttus_Billing__DunningReminderLog__c/fields/Apttus_Billing__DunningPolicyLineItemId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__DunningPolicyLineItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the dunning policy line item for auditing purposes</description>
    <label>Dunning Policy Line Item</label>
    <referenceTo>Apttus_Billing__DunningPolicyLineItem__c</referenceTo>
    <relationshipLabel>Dunning Reminder Logs</relationshipLabel>
    <relationshipName>Dunning_Reminder_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>