force-app/main/default/objects/Apttus_Billing__DunningReminderLog__c/fields/Apttus_Billing__ReminderDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__ReminderDate__c</fullName>
    <description>Date on which the reminder is sent</description>
    <inlineHelpText>Date on which the reminder is sent</inlineHelpText>
    <label>Reminder Date</label>
    <type>Date</type>
</CustomField>