force-app/main/default/objects/Apttus_Billing__DunningReminderLog__c/fields/Apttus_Billing__ReminderSequence__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__ReminderSequence__c</fullName>
    <description>The sequence of the reminder. 
If this is the first reminder the reminder sequence should be 1. For 2nd reminder, it should be 2 and so on</description>
    <inlineHelpText>The sequence of the reminder. 
If this is the first reminder the reminder sequence should be 1. For 2nd reminder, it should be 2 and so on</inlineHelpText>
    <label>Reminder Sequence</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>